筆記本App,使用到CoreData

--- a/NoteAppForSwift/Info.plist
+++ b/NoteAppForSwift/Info.plist
@@ -41,5 +41,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>將存取您的相片用於日記本</string>
 </dict>
 </plist>
